Refactoring & Make it compilable in Java 8